fix: hide detail marker on safari

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -4,6 +4,10 @@ html, body , #__nuxt{
   padding: 0;
 }
 
+summary::-webkit-details-marker {
+  display:none;
+}
+
 body {
   --at-apply: bg-base color-base font-sans;
 }
